Package structure chenged.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="log_out">Вихід</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
+    <string name="linkedin_profile">LinkedIn профіль</string>
 
 </resources>
