add: EditContactActivity - class for edit information about contact, Interface WorkWithFragment, where described methods for works with fragment, AsynkTaskClass(in AddContactFragent) - asynkTask for download list of contact from phone contact, PhoneContactLoader - for download contacts with phone book, ContentResolverLib - for get Contentresolver;  update: change listView to RecycleView in addContactFragment, change imageView to CircleImageView, change Picasso library to Glide library - for download photo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,17 @@
     <string name="open">Open</string>
     <string name="close">Close</string>
     <string name="linkedin_profile">LinkedIn профіль</string>
+    <string name="edit_contact">Редагування контакту</string>
+    <string name="trainee">Trainee</string>
+    <string name="junior">Junior</string>
+    <string name="middle">Middle</string>
+    <string name="senior">Senior</string>
+    <string name="experience">Досвід роботи</string>
+    <string name="advantages">Переваги</string>
+    <string name="disadvantages">Недоліки</string>
+    <string name="notes">Замітка</string>
+    <string name="job_or_university">Mісце робити чи навчання</string>
+    <string name="languages">Іноземні мови</string>
+    <string name="skills">Навички</string>
 
 </resources>
